--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -17,6 +18,7 @@ body{
 }
 
 .card{
+    font-family: 'Sono', sans-serif;;
     background-color: #7136ce;
     border-radius: 25px;
     box-shadow: 7px 7px 20px 0px rgba(50, 50, 50, 0.22);
