--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     cursor: default;
 }
 
+/* CARD ROXO */
 .card{
     font-family: 'Sono', sans-serif;
     font-size: 13px;
@@ -31,6 +32,7 @@ body{
     transition: all 0.3s ease-out;
 }
 
+/* SEÇÃO DE ALUNOS */
 .alunos{
     display: flex;
     overflow-x: scroll;
@@ -54,6 +56,8 @@ a{
     border: 3px solid #7136ce;
 }
 
+
+/* CARD DE CIMA */
 .cards-e{
     display: flex;
     flex-direction: column;
@@ -160,7 +164,7 @@ a{
 }
 
 
-
+/* CARD DE BAIXO */
 
 .card-ee {
     margin: 20px;
