--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
     --background: #212121;
     --text: #fff;
     --text-white: #b7b7b7;
-    --title: #000;
+    --title: #fff;
     --blue: #0000FF;
     --roxo: #672178ff;
     --background-card: #1f222a;
