--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
 html{
     --background: #212121;
@@ -8,6 +9,7 @@ html{
     --blue: #0000FF;
     --roxo: #672178ff;
     --background-card: #1f222a;
+    --card: #353535;
 
     
     /* text */
@@ -330,8 +332,18 @@ a{
 .info{
     color: var(--color-text);
     font-size: 10pt;
+    background-color: var(--card);
+    border-radius: 20px;
+    padding: 20px;
+    font-family: 'Inter', sans-serif;
+    font-size: 10pt;
+    margin-top: 1vw;
+    transition: background 0.5s;
 }
 
+span{
+    color: #fc5757;
+}
 
 
 
@@ -351,6 +363,11 @@ a{
 
     .avatar img{
         width: 40vw;
+        margin-top: -10vh;
+    }
+
+    .info{
+        font-size: 6pt;
     }
 }
 
